removing margin right from folder nav item to avoid horizontal scrolling on tablet and mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -362,7 +362,7 @@ button.btn,
                 }
                 &.folder {
                     /* Folder dropdown arrow BG style goes Here */
-                    margin-right: 20px;
+                    margin-right: 0;
                     cursor: pointer;
                     background-image: none;
                     .text {
